geoip lookup on save

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EMAIL_HOST_USER="joe@example.com"
-EMAIL_HOST_PASSWORD="supersecret"
+SMTP_USERNAME="joe@example.com"
+SMTP_PASSWORD="supersecret"
 GEOIP2_API_USER="userid"
 GEOIP2_API_KEY="apikey"
