google maps and dashboard

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ SMTP_USERNAME="joe@example.com"
 SMTP_PASSWORD="supersecret"
 GEOIP2_API_USER="userid"
 GEOIP2_API_KEY="apikey"
+GOOGLE_MAPS_API_KEY="apikey"
