admin email confirmation before login

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-SMTP_USERNAME="joe@example.com"
+KAHU_ADMIN_EMAIL="info@example.com"
+SMTP_USERNAME="user@example.com"
 SMTP_PASSWORD="supersecret"
 GEOIP2_API_USER="userid"
 GEOIP2_API_KEY="apikey"
