--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ## Web Application
 Django==2.0.6
+django-model-utils==3.1.2
 django-rest-framework==0.1.0
 djangorestframework==3.8.2
 dj-database-url==0.5.0
