--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 ## Web Application
-Django==2.0.6
+Django==2.1
 django-model-utils==3.1.2
 django-rest-framework==0.1.0
 djangorestframework==3.8.2
 dj-database-url==0.5.0
-gunicorn==19.7.1
-psycopg2==2.7.4
-python-dotenv==0.8.2
+gunicorn==19.9.0
+psycopg2>=2.7,<2.8 --no-binary psycopg2
+python-dotenv==0.9.1
 social-auth-app-django==2.1.0
 social-auth-core==1.7.0
-whitenoise==3.3.1
+whitenoise==4.0
 
 ## Utilities
 boto3==1.7.35
-pytz==2018.4
+pytz==pytz-2018.5
 python-dateutil==2.7.2
-requests==2.18.4
+requests==2.19.1
 six==1.11.0
 
 ## Subdependencies
@@ -34,6 +34,6 @@ six==1.11.0
 #urllib3==1.22
 
 ## Python Environment
-#pip==10.0.1
+#pip==18.0
 #setuptools==39.2.0
 #wheel==0.31.1
