--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ whitenoise==4.0
 
 ## Utilities
 boto3==1.7.35
-pytz==pytz-2018.5
+pytz==2018.5
 python-dateutil==2.7.2
 requests==2.19.1
 six==1.11.0
