--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,18 @@ six==1.11.0
 #s3transfer==0.1.13
 #urllib3==1.22
 
+## Graphics 
+cycler==0.10.0
+kiwisolver==1.0.1
+matplotlib==2.2.3
+numpy==1.15.1
+pandas==0.23.4
+pyparsing==2.2.0
+scipy==1.1.0
+seaborn==0.9.0
+
 ## Python Environment
 #pip==18.0
 #setuptools==39.2.0
 #wheel==0.31.1
+
